tests/should_fail/unexpected_return_value.jou
def f() -> void:
    return 'x'  # Error: function "f(...) -> void" does not return a value
